--- a/config_examples/other/config16x16.yaml
+++ b/config_examples/other/config16x16.yaml
@@ -20,7 +20,7 @@ r2r_link_length: 1.0
 #   ODD_EVEN
 #   DYAD
 #   TABLE_BASED
-routing_algorithm: RPATH
+routing_algorithm: PATH
 routing_table_filename: ""
 
 # Routing specific parameters
@@ -28,7 +28,7 @@ routing_table_filename: ""
 dyad_threshold: 0.6
 
 # broadcast probability: double
-broadcast_probability: 0.1
+broadcast_probability: 0.05
 
 # inject buffer congestion threshold: double. 
 # inject_buffer utility greater than that will be taken as congested
@@ -105,7 +105,7 @@ Channels:
 #
 clock_period_ps: 1000
 reset_time: 1000
-simulation_time: 60000
+simulation_time: 30000
 stats_warm_up_time: 1000
 detailed: false
 max_volume_to_be_drained: 0
@@ -128,8 +128,8 @@ trace_filename: ""
 
 min_packet_size: 2
 max_packet_size: 4
-packet_injection_rate: 0.15
-probability_of_retransmission: 0.15
+packet_injection_rate: 0.01
+probability_of_retransmission: 0.01
 
 # Traffic distribution:
 #   TRAFFIC_RANDOM
